<resources>
    <string name="app_name">Chợ Mơ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dieukhoan">Chấp nhận điều khoản sử dụng</string>
    <string name="tvLogin">Đăng nhập</string>
    <string name="tvLoginDesc">Chào bạn quay lại</string>
    <string name="hintEmail">Nhập Email của bạn</string>
    <string name="hintPassword">Nhập mật khẩu của bạn</string>
    <string name="login">Đăng nhập</string>
    <string name="tvForgotPass">Bạn quên mật khẩu?</string>
    <string name="tvNoAccount">Chưa có tài khoản?</string>
    <string name="tvRegNow">Đăng ký ngay</string>
    <string name="tvRegister">Đăng ký</string>
    <string name="tvRegDesc">Tạo tài khoản Chợ Tốt ngay</string>
    <string name="hintName">Nhập tên của bạn</string>
    <string name="register">Đăng ký</string>
    <string name="tvTerm">Bằng việc Đăng ký, bạn đã đồng ý với Điều khoản sử dụng của Chợ tốt</string>
    <string name="tvHaveAccount">Bạn đã có tài khoản?</string>
    <string name="action_home">Trang chủ</string>
    <string name="action_sell">Tôi bán</string>
    <string name="action_post">Đăng tin</string>
    <string name="action_notifi">Thông báo</string>
    <string name="action_more">Thêm</string>
    <string name="skip">Bỏ qua</string>
    <string name="search">Tìm kiếm</string>
    <string name="content_description_search">Tìm kiếm trên chợ Tốt</string>
    <string name="chat">Tin nhắn</string>
    <string name="content_description_favorite">Chat</string>
    <string name="more">Xem thêm</string>
    <string name="dinhGiaXe">Định Giá Bán Xe</string>
    <string name="uuDai">Chợ Tốt Ưu Đãi</string>
    <string name="napDongTot">Nạp Đồng Tốt</string>
    <string name="tinDangLuu">Tin đăng đã lưu</string>
    <string name="vongQuay">Vòng quay may mắn</string>
    <string name="timKiemLuu">Tìm kiếm đã lưu</string>
    <string name="tvTinh">Tỉnh thành: </string>
    <string name="tvHuyen">"Quận, huyện: "</string>
    <string name="tvXa">"Phường, xã: "</string>
    <string name="tvAdress">Địa chỉ</string>
    <string name="etname">Tên sản phẩm</string>
    <string name="etDesc">Nhập mô tả sản phẩm</string>
    <string name="etPrice">Giá sản phẩm VND</string>
    <string name="tvProduct">Thông tin sản phẩm</string>
    <string name="btnImages">Thêm hình ảnh sản phẩm</string>
    <string name="tvContact">Thông tin liên hệ</string>
    <string name="etAddress">Địa chỉ cụ thể: số nhà, tên đường</string>
    <string name="etPNUmber">Số điện thoại</string>
    <string name="btnPost">Đăng tin</string>
    <string name="tvCate">Danh mục: </string>
    <string name="logout">Đăng xuất</string>
    <string name="hintSDT">Nhập số diện thoại</string>
    <string name="btnXacMinh">Lấy mã</string>
    <string name="hintXacMinh">Nhập mã xác minh</string>
    <string name="savepost">Lưu tin</string>
    <string name="tvViewProfile">Xem trang</string>
    <string name="tvShowInfo">Thông tin liên hệ</string>
    <string name="note_buy">Lựa chọn hình thức giao hàng an toàn-uy tín-hiệu quả, khi nhận hàng hãy kiểm tra cẩn thận chất lượng sản phẩm sau đó mới trả tiền.</string>
    <string name="call">Gọi điện</string>
    <string name="sms">Gửi SMS</string>
    <string name="Cchat">Chat</string>
    <string name="rating">Đánh giá: </string>
    <string name="norate">Chưa có đánh giá</string>
    <string name="datejoin">Ngày tham gia: </string>
    <string name="address">Địa chỉ: </string>
    <string name="phanhoichat">Phản hồi chat: </string>
    <string name="dangban">Đang bán - </string>
    <string name="suaTin">Sửa tin</string>
    <string name="daBan">Báo tin đã bán</string>
    <string name="btnSavePost">Lưu chỉnh sửa</string>
    <string name="khuvuc"> Khu vực: </string>
    <string name="danghienthi">Đang hiển thị</string>
    <string name="daban">Đã bán</string>
    <string name="requestLogin">Vui lòng đăng nhập lại để thực hiện chức năng này.</string>
    <string name="loginRegister">Đăng nhập/Đăng ký</string>
    <string name="tvForgotPassword">Quên mật khẩu</string>
    <string name="tvForgotPasswordDesc">Nhập SĐT đển reset mật khẩu</string>
    <string name="hintPasswordRe">Nhập mật khẩu mới</string>
    <string name="hintPasswordRe2">Nhập lại mật khẩu mới</string>
    <string name="resetpass">Reset Mật khẩu</string>
    <string name="tvGuilaima">Gửi lại mã xác nhận sau </string>
    <string name="tvExCate">Khám phá danh mục</string>
    <string name="tvTinmoi">Tin mới đăng</string>
    <string name="savepostok">Đã lưu</string>
    <string name="tvAuthentication">Xác thực đăng nhập</string>
    <string name="tvAuthenticDesc">Có vẻ như tài khoản của bạn chưa từng đăng nhập trên thiết bị này, hoặc đang sử dụng để đăng nhập trên nhiều thiết bị cùng lúc.</string>
    <string name="hintSDTXT">Nhập SĐT để xác thực</string>
    <string name="btnAuthentication">Xác minh tài khoản</string>
    <string name="hovaten">Họ và tên</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="diachi">Địa chỉ</string>
    <string name="matkhau">Mật khẩu (bỏ trống nếu không muốn cập nhật)</string>
    <string name="btnCapnhat">Cập nhật</string>
    <string name="tvEditUser">Chỉnh sửa trang cá nhân</string>
    <string name="banbe">Bạn bè</string>
    <string name="taiKhoanDongTot">Tài khoản Đồng Tốt</string>
    <string name="trogiup">Trợ giúp</string>
    <string name="xacnhan">Xác nhận</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Xác nhận</string>
    <string name="cacgoinap">Các gói nạp</string>
    <string name="tinuutien">Tin ưu tiên</string>
    <string name="dayTin">Đẩy tin</string>
    <string name="ontopexp">Bài viết này sẽ được on top đến ngày: </string>
    <string name="chiduong">Chỉ đường</string>
</resources>