<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/desktop_background"
            android:layout_alignParentBottom="true"
            android:scaleType="fitEnd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center">

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvLogin"
                        android:textColor="#FFBA00"
                        android:textSize="30sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvLoginDesc"
                        android:textColor="#9B9B9B"
                        android:textSize="20sp"
                        android:textStyle="normal"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"/>

            </LinearLayout>

            <EditText
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:padding="10dp"
                android:digits="0123456789"
                android:hint="@string/hintSDT"
                android:inputType="phone"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/tvPass"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:padding="10dp"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvForgotPass"
                android:layout_marginTop="10dp"
                android:textColor="#38699F"
                android:textSize="15sp"
                android:textStyle="normal"/>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvNoAccount"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/tvRegNow"
                    android:textColor="#38699F"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</layout>